# cargo-mono

./: Cargo.toml  README.md  REAME.md
.github/workflows/: CI.yml
scripts/: test.sh
src/: bump.rs  crates_io.rs  info.rs  main.rs  publish.rs  util.rs
testing/common/: Cargo.toml
testing/dependant/: Cargo.toml
