[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Cargo subcommand to manage mono repository"
edition = "2018"
license = "Apache-2.0"
name = "cargo-mono"
repository = "https://github.com/kdy1/cargo-mono.git"
version = "0.3.7"

[dependencies]
anyhow = "1.0.40"
cargo_metadata = "0.13.1"
futures-util = "0.3.15"
petgraph = "0.5.1"
requestty = "0.1.3"
reqwest = "0.11.22"
semver = "0.11.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.108"
structopt = "0.3.21"
tokio = { version = "1.6.0", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "process",
    "macros",
    "time",
] }
toml_edit = "0.2.0"
walkdir = "2.3.2"
